# Kudan

./: .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  RISK_POLICY.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: broker.py  config.py  db.py  llm.py  main.py  risk.py  runner.py  strategies.py
app/templates/: base.html  chat.html  dashboard.html  runs.html  settings.html  strategies.html
docs/: CHARACTER.md  DEPLOYMENT_VPS.md  ROADMAP.md  RUNTIME_AGENT_PROMPT.md
tests/: conftest.py  test_broker.py  test_risk.py  test_smoke.py
